#4107 Fixes only one vertical button

--- a/src/definitions/elements/button.less
+++ b/src/definitions/elements/button.less
@@ -3419,6 +3419,9 @@
   border-bottom-left-radius: @borderRadius;
   border-bottom-right-radius: @borderRadius;
 }
+.ui.vertical.buttons .button:only-child {
+  border-radius: @borderRadius;
+}
 
 .loadUIOverrides();
 
